[gd_scene load_steps=33 format=3 uid="uid://cnj0t3ad178q6"]

[ext_resource type="Script" path="res://DemoPage/DemoPage.gd" id="1_4brsx"]
[ext_resource type="Shader" path="res://DemoPage/Assets/BlurShader.gdshader" id="2_07raf"]
[ext_resource type="Texture2D" uid="uid://3fxtm3u8im2" path="res://DemoPage/Assets/gdquest_logo_white.svg" id="3_n7elw"]
[ext_resource type="Texture2D" uid="uid://c1h5gk8rsf3va" path="res://DemoPage/Assets/RoundedRectangle.png" id="4_paxwi"]
[ext_resource type="Texture2D" uid="uid://bisdpbdirkat6" path="res://DemoPage/Assets/DemoPageBackground.png" id="5_3cf56"]
[ext_resource type="FontFile" uid="uid://ch2aef1jex81f" path="res://DemoPage/Fonts/Montserrat-Bold.ttf" id="6_r37av"]
[ext_resource type="FontFile" uid="uid://t50djx4didf7" path="res://DemoPage/Fonts/Montserrat-Medium.ttf" id="7_8vsh6"]
[ext_resource type="Texture2D" uid="uid://xhe0n1psocjo" path="res://DemoPage/ControllerIcons/wasd.png" id="8_ftfx8"]
[ext_resource type="Texture2D" uid="uid://078sfj6nla2e" path="res://DemoPage/ControllerIcons/spacebar2.png" id="9_0yun6"]
[ext_resource type="Texture2D" uid="uid://dr3g38uhvcdhd" path="res://DemoPage/ControllerIcons/joystickL_side.png" id="9_16jmy"]
[ext_resource type="Script" path="res://DemoPage/LinkButton.gd" id="9_scsih"]
[ext_resource type="Texture2D" uid="uid://cgkvjl80iqkeg" path="res://DemoPage/ControllerIcons/tab.png" id="10_6dsjm"]
[ext_resource type="Texture2D" uid="uid://tfus7d2ysvap" path="res://DemoPage/ControllerIcons/keyboard.png" id="10_uxdfh"]
[ext_resource type="Texture2D" uid="uid://drxg34lsicm31" path="res://DemoPage/ControllerIcons/mouse.png" id="10_y1v2l"]
[ext_resource type="Texture2D" uid="uid://cwnhk6pv52ilv" path="res://DemoPage/ControllerIcons/gamepad.png" id="11_eh4lo"]
[ext_resource type="Texture2D" uid="uid://cercyyjcwv0x8" path="res://DemoPage/ControllerIcons/esc.png" id="11_ittqo"]
[ext_resource type="Texture2D" uid="uid://betbepmba8wdn" path="res://DemoPage/ControllerIcons/mouseRight.png" id="11_pk6rw"]
[ext_resource type="Texture2D" uid="uid://dnanigj1fkkop" path="res://DemoPage/ControllerIcons/mouseLeft.png" id="12_baaxu"]
[ext_resource type="Texture2D" uid="uid://cgp8kkys51rsh" path="res://DemoPage/ControllerIcons/joystickR_side.png" id="15_svyf1"]
[ext_resource type="Texture2D" uid="uid://26gko37h02x" path="res://DemoPage/ControllerIcons/down_button.png" id="16_rl0yy"]
[ext_resource type="Texture2D" uid="uid://b8tabivxbgcgj" path="res://DemoPage/ControllerIcons/up_button.png" id="17_det7k"]
[ext_resource type="Texture2D" uid="uid://bm4i5limc5q4h" path="res://DemoPage/ControllerIcons/r2_button.png" id="18_64dkh"]
[ext_resource type="Texture2D" uid="uid://cwxudh6hj0dx" path="res://DemoPage/ControllerIcons/l2_button.png" id="19_ymr5x"]
[ext_resource type="Texture2D" uid="uid://dnk6rxv8ejgny" path="res://DemoPage/ControllerIcons/buttonStart.png" id="21_hfiqr"]
[ext_resource type="Texture2D" uid="uid://u8dgw2xh1ofy" path="res://DemoPage/Assets/discord-icon.png" id="24_2yjb0"]
[ext_resource type="Texture2D" uid="uid://4028ms3tu0f0" path="res://DemoPage/Assets/twitter-icon.png" id="26_jj2ra"]
[ext_resource type="Texture2D" uid="uid://bu5fw8vbrfsmm" path="res://DemoPage/Assets/itch-icon.png" id="27_mjmj1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oq2x4"]
shader = ExtResource("2_07raf")
shader_parameter/blur_scale = Vector2(4, 4)
shader_parameter/color_modulate = Color(0.780392, 0.717647, 0.968627, 1)

[sub_resource type="LabelSettings" id="LabelSettings_swl1q"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_y4f87"]
line_spacing = 16.0
font = ExtResource("6_r37av")
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_g5g84"]
line_spacing = 0.0
font = ExtResource("7_8vsh6")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_f30p8"]
font = ExtResource("7_8vsh6")
font_size = 26

[node name="DemoPage" type="Node"]
process_mode = 3
script = ExtResource("1_4brsx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="DemoPageRoot" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="ColorRect" parent="CanvasLayer/DemoPageRoot"]
material = SubResource("ShaderMaterial_oq2x4")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="CanvasLayer/DemoPageRoot"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Control" parent="CanvasLayer/DemoPageRoot/Content"]
modulate = Color(1, 1, 1, 0.54902)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Title"]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_n7elw")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Title"]
layout_mode = 0
offset_left = 1043.0
offset_top = 158.0
offset_right = 1104.0
offset_bottom = 189.0
text = "DEMO"
label_settings = SubResource("LabelSettings_swl1q")

[node name="Content" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="SampleImageContainer" type="Control" parent="CanvasLayer/DemoPageRoot/Content/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Mask" type="NinePatchRect" parent="CanvasLayer/DemoPageRoot/Content/Content/SampleImageContainer"]
clip_children = 1
layout_mode = 0
anchor_left = 0.277
anchor_top = 0.032
anchor_right = 0.76
anchor_bottom = 0.975
offset_left = -0.365997
offset_top = -0.112001
offset_right = -0.0800781
offset_bottom = 0.274963
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_paxwi")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/SampleImageContainer/Mask"]
layout_mode = 0
offset_left = -844.0
offset_top = -216.0
offset_right = 1076.0
offset_bottom = 864.0
texture = ExtResource("5_3cf56")

[node name="GameDescription" type="Control" parent="CanvasLayer/DemoPageRoot/Content/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 52

[node name="ContentContainer" type="VBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Third-Person Shooter"
label_settings = SubResource("LabelSettings_y4f87")

[node name="Inspirations" type="RichTextLabel" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_r37av")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[color=#daeaf6]Ratchet & Clank[/color] Â· [color=#f0c1aa]Banjo Kazooie[/color]"

[node name="DescriptionMargin" type="MarginContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="Description" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/DescriptionMargin"]
layout_mode = 2
size_flags_vertical = 1
text = "This demo features a simple character controller for Third-Person Shooter games. The player can move around, jump, attack, shoot projectiles and launch grenades. Collect Godot-coins by destroying crates!"
label_settings = SubResource("LabelSettings_g5g84")
autowrap_mode = 2

[node name="ControlsDescription" type="Control" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 80

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainerKeyboard" type="GridContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_ftfx8")
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Movement"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("9_0yun6")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Jump"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer6" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer6"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("10_6dsjm")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Change Weapon"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer7" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer7"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("11_ittqo")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Pause"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("10_y1v2l")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Camera"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("11_pk6rw")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Attack"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer5" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer5"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("12_baaxu")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerKeyboard/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Aim"
label_settings = SubResource("LabelSettings_f30p8")

[node name="GridContainerJoypad" type="GridContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("9_16jmy")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Movement"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("15_svyf1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Camera"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("16_rl0yy")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Jump"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer6" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer6"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("17_det7k")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Change Weapon"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("18_64dkh")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Attack"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer5" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer5"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("19_ymr5x")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Aim"
label_settings = SubResource("LabelSettings_f30p8")

[node name="HBoxContainer7" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer7"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("21_hfiqr")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/GridContainerJoypad/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = ": Pause / Resume"
label_settings = SubResource("LabelSettings_f30p8")

[node name="ButtonContainer" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KeyboardButton" type="Button" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("10_uxdfh")
icon_alignment = 1
expand_icon = true

[node name="JoypadButton" type="Button" parent="CanvasLayer/DemoPageRoot/Content/Content/GameDescription/MarginContainer/ContentContainer/ControlsDescription/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("11_eh4lo")
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="Control" parent="CanvasLayer/DemoPageRoot/Content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot/Content/MarginContainer"]
layout_mode = 0
anchor_left = 0.368
anchor_top = 0.5
anchor_right = 0.632
anchor_bottom = 0.5
offset_left = -0.559998
offset_top = -44.5
offset_right = 0.559937
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme_override_constants/separation = 50
alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/DemoPageRoot/Content/MarginContainer/Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("6_r37av")
theme_override_font_sizes/font_size = 26
action_mode = 0
text = "  Resume demo  "

[node name="Exit" type="Button" parent="CanvasLayer/DemoPageRoot/Content/MarginContainer/Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("6_r37av")
theme_override_font_sizes/font_size = 26
action_mode = 0
text = "  Exit demo  "

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DemoPageRoot"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -332.0
offset_top = -108.0
offset_right = -40.0
offset_bottom = -54.0
grow_horizontal = 0
grow_vertical = 0

[node name="DiscordButton" type="TextureButton" parent="CanvasLayer/DemoPageRoot/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
texture_normal = ExtResource("24_2yjb0")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("9_scsih")
link = "https://discord.gg/BDe4y6Z4cf"

[node name="TwitterButton" type="TextureButton" parent="CanvasLayer/DemoPageRoot/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
texture_normal = ExtResource("26_jj2ra")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("9_scsih")
link = "https://twitter.com/NathanGDQuest"

[node name="ItchButton" type="TextureButton" parent="CanvasLayer/DemoPageRoot/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
texture_normal = ExtResource("27_mjmj1")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("9_scsih")
link = "https://gdquest.itch.io/"
